# tribev2-rs

./: .gitignore  Cargo.toml  PLAN.md  README.md  build.rs
bench/: bench_burn.rs  bench_python.py  bench_rust.rs  gen_charts.py  profile_burn.rs  results_python.json  results_rust_burn_ndarray.json  results_rust_burn_ndarray_accelerate.json  results_rust_burn_wgpu_metal.json  results_rust_burn_wgpu_metal_f16.json  results_rust_cpu.json  results_rust_cpu_accelerate.json
crates/tribev2/: Cargo.toml
crates/tribev2-audio/: Cargo.toml
crates/tribev2-audio/src/: audio_io.rs  config.rs  conformer.rs  feature_encoder.rs  lib.rs  model.rs  weights.rs
crates/tribev2-video/: Cargo.toml
crates/tribev2-video/src/: config.rs  lib.rs  model.rs  patch_embed.rs  video_io.rs  vit.rs  weights.rs
crates/tribev2/bench/: bench_burn.rs  profile_burn.rs  results_python.json  results_rust_burn_wgpu_metal.json  results_rust_burn_wgpu_metal_kernels.json  run_all.sh
crates/tribev2/examples/: burn_inference.rs  multimodal_predict.rs  text_predict.rs
crates/tribev2/src/: config.rs  download.rs  features.rs  fsaverage.rs  lib.rs  metrics.rs  nifti.rs  pipeline.rs  plotting.rs  resample.rs  roi.rs  segments.rs  subcortical.rs  tensor.rs  video_output.rs  vol_to_surf.rs  weights.rs
crates/tribev2/src/model/: attention.rs  feedforward.rs  mod.rs  projector.rs  subject_layers.rs  tribe.rs
crates/tribev2/src/model_burn/: attention.rs  encoder.rs  feedforward.rs  mod.rs  projector.rs  residual.rs  rotary.rs  tribe.rs  weights.rs
crates/tribev2/tests/: burn_parity.rs  full_parity.rs  numeric_parity.rs
examples/: text_predict.rs
examples/outputs/: audio_features.json  roi_summary.json  segments.json  text_features.json  video_features.json
figures/: bench_table.md  results_rust_burn_ndarray.json  results_rust_burn_ndarray_accelerate.json  results_rust_burn_wgpu_metal.json  results_rust_cpu_accelerate.json
scripts/: convert_checkpoint.py  extract_llama_features.py  generate_full_parity_refs.py  generate_parity_refs.py  render_nifti_slices.py
src/: config.rs  download.rs  events.rs  features.rs  lib.rs  plotting.rs  tensor.rs  weights.rs
src/model/: encoder.rs  projector.rs  residual.rs  rotary.rs  scalenorm.rs  temporal_smoothing.rs  tribe.rs
src/model_burn/: attention.rs  encoder.rs  fused.rs  kernels.rs  mod.rs  projector.rs  residual.rs  rotary.rs  scalenorm.rs  subject_layers.rs  tribe.rs
tests/: e2e_multimodal.rs  parity_tests.rs  unit_tests.rs
