[package]
name = "tribev2-rs"
version = "0.1.0"
edition = "2021"
description = "TRIBE v2 — multimodal fMRI brain encoding model inference in Rust"
keywords = ["fmri", "neuroscience", "multimodal", "brain-encoding", "llama"]
categories = ["science", "mathematics"]
authors = ["Eugene Hauptmann"]
license = "Apache-2.0"
readme = "README.md"

exclude = ["data/", "figures/", "scripts/"]

[lib]
name = "tribev2_rs"
path = "src/lib.rs"

[[bin]]
name = "tribev2-infer"
path = "src/bin/infer.rs"

[[bin]]
name = "tribev2-download"
path = "src/bin/download.rs"
required-features = ["hf-download"]

[[example]]
name = "text_predict"
path = "examples/text_predict.rs"

[[example]]
name = "bench_rust"
path = "bench/bench_rust.rs"

[[example]]
name = "bench_burn"
path = "bench/bench_burn.rs"

[features]
default = ["ndarray", "metal"]
# ── CPU backends ─────────────────────────────────────────────
ndarray         = ["dep:burn-ndarray", "burn/ndarray"]
blas-accelerate = ["burn-ndarray?/blas-accelerate"]
# ── GPU backend ──────────────────────────────────────────────
wgpu            = ["burn/wgpu"]
wgpu-metal      = ["wgpu", "burn-wgpu/metal"]
wgpu-vulkan     = ["wgpu", "burn-wgpu/vulkan"]
# ── llama-cpp GPU ────────────────────────────────────────────
cuda   = ["llama-cpp-4/cuda"]
metal  = ["llama-cpp-4/metal"]
vulkan = ["llama-cpp-4/vulkan"]
# ── Utilities ────────────────────────────────────────────────
hf-download = ["dep:hf-hub"]
accelerate = []  # legacy: direct cblas calls (deprecated, use blas-accelerate)

[dependencies]
burn         = { version = "0.20.1", default-features = false, features = ["std", "simd"] }
burn-ndarray = { version = "0.20.1", default-features = false, features = ["std", "simd", "multi-threads"], optional = true }
burn-wgpu    = { version = "0.20.1", default-features = true, optional = true }
llama-cpp-4  = { path = "../llama-cpp-rs/llama-cpp-4", default-features = false }
safetensors  = "0.7"
half         = { version = "2", features = ["bytemuck"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
clap         = { version = "4", features = ["derive"] }
anyhow       = "1.0"
bytemuck     = { version = "1", features = ["derive"] }
tracing      = "0.1"
hf-hub       = { version = "0.5", default-features = false, features = ["ureq"], optional = true }

[build-dependencies]
cc = "1.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
