[package]
name = "tribev2"
version = "0.0.1"
edition = "2021"
description = "TRIBE v2 — multimodal fMRI brain encoding model inference in Rust"
keywords = ["fmri", "neuroscience", "multimodal", "brain-encoding", "llama"]
categories = ["science", "mathematics"]
authors = ["Eugene Hauptmann"]
license = "Apache-2.0"
readme = "README.md"

exclude = ["data/", "figures/", "scripts/"]

[lib]
name = "tribev2"
path = "src/lib.rs"

[[bin]]
name = "tribev2-infer"
path = "src/bin/infer.rs"

[[bin]]
name = "tribev2-download"
path = "src/bin/download.rs"
required-features = ["hf-download"]

[[example]]
name = "text_predict"
path = "examples/text_predict.rs"

[[example]]
name = "bench_rust"
path = "bench/bench_rust.rs"

[[example]]
name = "bench_burn"
path = "bench/bench_burn.rs"

[[example]]
name = "profile_burn"
path = "bench/profile_burn.rs"

[features]
default = ["ndarray", "llama-metal"]

# ── Burn CPU backends ─────────────────────────────────────────
ndarray         = ["dep:burn-ndarray", "burn/ndarray"]
blas-accelerate = ["burn-ndarray?/blas-accelerate"]

# ── Burn GPU backend (wgpu) ───────────────────────────────────
# Base: WGSL shaders, auto-detects Metal/Vulkan/DX12 at runtime
wgpu            = ["burn/wgpu"]
# macOS: native Metal shader compilation (MSL)
wgpu-metal      = ["wgpu", "burn-wgpu/metal"]
# macOS Metal with f16 dtype — uses Metal WMMA (SIMD-group matmul),
# 2× arithmetic throughput + 2× memory bandwidth vs f32.
# Run: cargo run --release --example bench_burn \
#        --no-default-features --features wgpu-metal-f16,llama-metal
wgpu-metal-f16  = ["wgpu-metal"]
# Custom fused CubeCL kernels on Metal (no fusion wrapper, direct CubeBackend).
# Fused RoPE: 1 kernel vs ~10 dispatches × 16 applies per forward → ~2 ms gain.
# Fused ScaleNorm: 1 kernel (plane_sum) vs 3 dispatches × 17 calls → ~1 ms gain.
wgpu-kernels-metal = ["wgpu-metal", "dep:cubecl", "dep:burn-cubecl", "dep:burn-backend"]
# Linux/Windows: native Vulkan shader compilation (SPIR-V)
wgpu-vulkan     = ["wgpu", "burn-wgpu/vulkan"]

# ── llama-cpp GPU acceleration ────────────────────────────────
llama-cuda   = ["llama-cpp-4/cuda"]
llama-metal  = ["llama-cpp-4/metal"]
llama-vulkan = ["llama-cpp-4/vulkan"]

# ── Utilities ─────────────────────────────────────────────────
hf-download = ["dep:hf-hub"]
accelerate  = []  # legacy: direct cblas calls in tensor.rs

[dependencies]
burn         = { version = "0.20.1", default-features = false, features = ["std", "simd"] }
burn-ndarray = { version = "0.20.1", default-features = false, features = ["std", "simd", "multi-threads"], optional = true }
burn-wgpu    = { version = "0.20.1", default-features = true, optional = true }
cubecl        = { version = "0.9", features = ["wgpu"], optional = true }
burn-cubecl   = { version = "0.20.1", optional = true }
burn-backend  = { version = "0.20.1", optional = true }
llama-cpp-4  = { version = "0.2.15", default-features = false }
safetensors  = "0.7"
half         = { version = "2", features = ["bytemuck"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
clap         = { version = "4", features = ["derive", "env"] }
anyhow       = "1.0"
bytemuck     = { version = "1", features = ["derive"] }
tracing      = "0.1"
hf-hub       = { version = "0.5", default-features = false, features = ["ureq"], optional = true }
tempfile     = "3"

[build-dependencies]
cc = "1.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
