[package]
name = "tribev2"
version = "0.0.4"
edition = "2021"
description = "TRIBE v2 — multimodal fMRI brain encoding model inference in Rust"
keywords = ["fmri", "neuroscience", "multimodal", "brain-encoding", "llama"]
categories = ["science", "mathematics"]
authors = ["Eugene Hauptmann"]
license = "Apache-2.0"
readme = "../../README.md"
documentation = "https://docs.rs/tribev2"
homepage = "https://github.com/eugenehp/tribev2-rs"
repository = "https://github.com/eugenehp/tribev2-rs"

exclude = ["data/", "figures/", "scripts/"]

[lib]
name = "tribev2"
path = "src/lib.rs"

[[bin]]
name = "tribev2-infer"
path = "src/bin/infer.rs"

[[bin]]
name = "tribev2-download"
path = "src/bin/download.rs"
required-features = ["hf-download"]

[[example]]
name = "text_predict"
path = "examples/text_predict.rs"

[[example]]
name = "multimodal_predict"
path = "examples/multimodal_predict.rs"

[[example]]
name = "burn_inference"
path = "examples/burn_inference.rs"

[[example]]
name = "bench_rust"
path = "bench/bench_rust.rs"

[[example]]
name = "bench_burn"
path = "bench/bench_burn.rs"

[[example]]
name = "profile_burn"
path = "bench/profile_burn.rs"

[features]
default = ["ndarray", "llama-metal"]

# ── Burn CPU backends ─────────────────────────────────────────
ndarray         = ["dep:burn-ndarray", "burn/ndarray"]
blas-accelerate = ["burn-ndarray?/blas-accelerate"]

# ── Burn GPU backend (wgpu) ───────────────────────────────────
wgpu            = ["burn/wgpu"]
wgpu-metal      = ["wgpu", "burn-wgpu/metal"]
wgpu-metal-f16  = ["wgpu-metal"]
wgpu-kernels-metal = ["wgpu-metal", "dep:cubecl", "dep:burn-cubecl", "dep:burn-backend"]
wgpu-vulkan     = ["wgpu", "burn-wgpu/vulkan"]

# ── llama-cpp GPU acceleration ────────────────────────────────
llama-cuda   = ["llama-cpp-4/cuda"]
llama-metal  = ["llama-cpp-4/metal"]
llama-vulkan = ["llama-cpp-4/vulkan"]

# ── Utilities ─────────────────────────────────────────────────
hf-download = ["dep:hf-hub"]
accelerate  = []

[dependencies]
burn         = { version = "0.20.1", default-features = false, features = ["std", "simd"] }
burn-ndarray = { version = "0.20.1", default-features = false, features = ["std", "simd", "multi-threads"], optional = true }
burn-wgpu    = { version = "0.20.1", default-features = true, optional = true }
cubecl       = { version = "0.9", features = ["wgpu"], optional = true }
burn-cubecl  = { version = "0.20.1", optional = true }
burn-backend = { version = "0.20.1", optional = true }
llama-cpp-4      = { version = "0.2.19", default-features = false }
safetensors  = "0.7"
half         = { version = "2", features = ["bytemuck"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
clap         = { version = "4", features = ["derive", "env"] }
anyhow       = "1.0"
bytemuck     = { version = "1", features = ["derive"] }
tracing      = "0.1"
hf-hub       = { version = "0.5", default-features = false, features = ["ureq"], optional = true }
tempfile     = "3"
flate2       = "1.0"

[build-dependencies]
cc = "1.2"
